# consultant-bot

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: bot_state.rs  main.rs
src/database/: mod.rs
src/handlers/: callbacks.rs  commands.rs  messages.rs  mod.rs  payments.rs  utils.rs
src/llm/: config.rs  mod.rs
src/models/: ai_assistants.rs  booking.rs  mod.rs  payment_config.rs  session.rs  time_slot.rs  user_state.rs
