[package]
name = "psychologist-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
secrecy = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
serde_json = "1.0.140"
log = "0.4"
env_logger = "0.11.8"
dotenvy = { version = "0.15.7"}
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest = { version = "0.12.22", features = ["native-tls"] }
anyhow = "1.0.98"
toml = "0.8.23"
thiserror = "1.0"
